[tool.poetry]
name = "p-dydx-guide"
version = "0.1.0"
description = ""
authors = ["Andrew Wolf <contact@awolf.io>"]
license = "CCBY-4.0"

[tool.poetry.dependencies]
python = "^3.9"
pip = ">=20.0.2"
numpy = "^1.24.2"
jupyter-book = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
